--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,20 @@
   margin-bottom: 15px;
 }
 
+.mb-0 {
+  margin-bottom: 0px !important;
+}
+
+.pv-5 {
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
+
+.pv-0 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
 th {
   padding-left: 20px;
   padding-right: 10px;
